force-app/main/default/objects/Shipper__c/Shipper__c.object-meta.xml
<CustomObject>
    <label>荷送人（Shipper）</label>
    <nameField>
        <label>荷送人No.</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>