force-app/main/default/objects/Shipper__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>荷送人（Shipper）</relationshipLabel>
    <relationshipName>member_auction_Shipper</relationshipName>
    <type>Lookup</type>
</CustomField>