force-app/main/default/objects/Shipper__c/fields/Memo_Shipper__c.field-meta.xml
<CustomField>
    <fullName>Memo_Shipper__c</fullName>
    <label>メモ（荷送先）</label>
    <type>TextArea</type>
</CustomField>