force-app/main/default/objects/Shipper__c/fields/shipper_address2__c.field-meta.xml
<CustomField>
    <fullName>shipper_address2__c</fullName>
    <label>以降住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>