force-app/main/default/objects/Shipper__c/fields/shipper_address__c.field-meta.xml
<CustomField>
    <fullName>shipper_address__c</fullName>
    <label>市区町村</label>
    <length>255</length>
    <type>Text</type>
</CustomField>