force-app/main/default/objects/Shipper__c/fields/shipper_jp_local_cd__c.field-meta.xml
<CustomField>
    <fullName>shipper_jp_local_cd__c</fullName>
    <label>日本地方公共団体コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>