force-app/main/default/objects/Shipper__c/fields/shipper_moto__c.field-meta.xml
<CustomField>
    <fullName>shipper_moto__c</fullName>
    <label>荷送人元</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>株式会社はなまる</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>自社</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>手入力</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>