force-app/main/default/objects/Shipper__c/fields/shipper_nm__c.field-meta.xml
<CustomField>
    <fullName>shipper_nm__c</fullName>
    <label>荷送人名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>