force-app/main/default/objects/Shipper__c/fields/shipper_postal_code__c.field-meta.xml
<CustomField>
    <fullName>shipper_postal_code__c</fullName>
    <label>郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>