force-app/main/default/objects/Shipper__c/fields/shipper_ptn_nm__c.field-meta.xml
<CustomField>
    <fullName>shipper_ptn_nm__c</fullName>
    <label>荷送人パターン名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>