force-app/main/default/objects/Shipper__c/fields/shipper_tel_no__c.field-meta.xml
<CustomField>
    <fullName>shipper_tel_no__c</fullName>
    <label>荷送人電話番号</label>
    <type>Phone</type>
</CustomField>