force-app/main/default/objects/Shipper__c/fields/shipper_todofken_cd__c.field-meta.xml
<CustomField>
    <fullName>shipper_todofken_cd__c</fullName>
    <label>都道府県</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prefectures</valueSetName>
    </valueSet>
</CustomField>