force-app/main/default/objects/Shipper__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>shipper_ptn_nm__c</columns>
    <columns>shipper_moto__c</columns>
    <columns>shipper_nm__c</columns>
    <columns>shipper_jp_local_cd__c</columns>
    <columns>shipper_postal_code__c</columns>
    <columns>shipper_address__c</columns>
    <columns>shipper_address2__c</columns>
    <columns>shipper_tel_no__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>